--- a/dubbo-admin/src/main/resources/application.properties
+++ b/dubbo-admin/src/main/resources/application.properties
@@ -15,13 +15,11 @@
 # limitations under the License.
 #
 
-server.port=7001
-spring.velocity.cache=false
-spring.velocity.charset=UTF-8
-spring.velocity.layout-url=/templates/default.vm
-spring.messages.fallback-to-system-locale=false
-spring.messages.basename=i18n/message
-spring.root.password=root
-spring.guest.password=guest
-
-dubbo.registry.address=zookeeper://127.0.0.1:2181
+server.port = ${port}
+spring.velocity.cache = false
+spring.velocity.charset = UTF-8
+spring.velocity.layout-url = /templates/default.vm
+spring.messages.fallback-to-system-locale = false
+spring.messages.basename = i18n/message
+spring.root.password = ${root.password}
+spring.guest.password = guest
